[ADD] favicon 추가

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/characters/chick_02.svg"
+    />
+    <link rel="shortcut icon" href="./src/assets/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>병아리, 병원 아이들을 위한 놀이터</title>
   </head>
   <body>
     <div id="root"></div>
